[package]
name = "proust"
version = "0.1.0"
authors = ["baspar <me@bastien-laine.io>"]
edition = "2018"
homepage = "https://github.com/baspar/proust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
# regex = "1.3.4"
futures = "0.3.4"
clap = { git = "https://github.com/clap-rs/clap/" }
